--- a/source/css/_partial/pagination.styl
+++ b/source/css/_partial/pagination.styl
@@ -1,12 +1,13 @@
 .pagination
   display: inline-block
-  margin-top: 2rem
+  margin-top: 1rem
   width: 100%
   text-align: center
+  font-weight: 400
 
   .page-number
     color: $color-text
-    font-size: .8rem
+    font-size: 1rem
 
   a
     padding: 4px 6px
