--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -113,21 +113,6 @@ body
           font-family: $font-family-mono
           -webkit-border-radius: 4px
 
-  // 底部样式
-
-  #footer
-    .footer-custom
-      margin-top: 5px
-      width: 100%
-      height: 40px
-      text-align: center
-
-    .img-response
-      width: 64px
-      height: 32px
-      vertical-align: middle
-      line-height: 40px
-
   p
     hyphens(auto)
 
@@ -239,7 +224,7 @@ code
   border-radius: 2px
   -webkit-border-radius: 2px
 
-p
+p,ul>li,ol>li
   code
     margin: 0
     padding: .1rem .4rem
