--- a/source/css/_colors/white.styl
+++ b/source/css/_colors/white.styl
@@ -10,6 +10,6 @@ $color-link = rgba(212, 128, 170, 1)
 $color-text = #383838
 $color-accent-3 = #8c8c8c
 $color-accent-2 = #383838
-$color-accent-1 = #2bbc8a
-$color-quote = #2bbc8a
+$color-accent-1 = #1AA261
+$color-quote = #1AA261
 $highlight = hexo-config("highlight") || "atelier-cave-light"
