rss icon added manually for social media links

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -11,8 +11,12 @@
         <% if (link == 'mail') { %>
           <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>">
             <i class="fas fa-envelope"></i><!--
-      ---></a><!--
-      ---><% } else { %>
+      ---></a>
+        <% } else if (link == 'rss') { %>
+          <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>">
+            <i class="fas fa-rss"></i>
+          </a>
+        <% } else { %>
           <a class="icon" target="_blank" rel="noopener" href="<%- url_for(theme.social_links[link]) %>">
             <i class="fab fa-<%= link %>"></i><!--
       ---></a><!--
