Apply new option `hash` to `theme.gravatar`

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -13,27 +13,39 @@
     }) %>
     <%- meta(page) %>
     <% if (theme.favicon) { %>
-        <% if (theme.favicon.desktop) { %>
-          <% if (theme.gravatar && theme.gravatar.email && theme.favicon.desktop.gravatar) { %>
-              <link rel="shortcut icon" href="<%= gravatar(theme.gravatar.email, 48) %>">
+      <% if (theme.favicon.desktop) { %>
+        <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.favicon.desktop.gravatar) { %>
+          <% if (theme.gravatar.email) { %>
+            <link rel="shortcut icon" href="<%= gravatar(theme.gravatar.email, 48) %>">
           <% } else { %>
-              <link rel="shortcut icon" href="<%= url_for(theme.favicon.desktop.url) %>">
+            <link rel="shortcut icon" href="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=48">
           <% } %>
+        <% } else { %>
+          <link rel="shortcut icon" href="<%= url_for(theme.favicon.desktop.url) %>">
         <% } %>
-        <% if (theme.favicon.android) { %>
-          <% if (theme.gravatar && theme.gravatar.email && theme.favicon.android.gravatar) { %>
+      <% } %>
+      <% if (theme.favicon.android) { %>
+        <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.favicon.android.gravatar) { %>
+          <% if (theme.gravatar.email) { %>
             <link rel="icon" type="image/png" href="<%= gravatar(theme.gravatar.email, 192) %>" sizes="192x192">
           <% } else { %>
-            <link rel="icon" type="image/png" href="<%= url_for(theme.favicon.android.url) %>" sizes="192x192">
+            <link rel="icon" type="image/png" href="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=192">
           <% } %>
+        <% } else { %>
+          <link rel="icon" type="image/png" href="<%= url_for(theme.favicon.android.url) %>" sizes="192x192">
         <% } %>
-        <% if (theme.favicon.apple) { %>
-          <% if (theme.gravatar && theme.gravatar.email && theme.favicon.apple.gravatar) { %>
+      <% } %>
+      <% if (theme.favicon.apple) { %>
+        <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.favicon.apple.gravatar) { %>
+          <% if (theme.gravatar.email) { %>
             <link rel="apple-touch-icon" sizes="180x180" href="<%= gravatar(theme.gravatar.email, 180) %>">
           <% } else { %>
-            <link rel="apple-touch-icon" sizes="180x180" href="<%= url_for(theme.favicon.apple.url) %>">
+            <link rel="apple-touch-icon" size="180x180" href="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=180">
           <% } %>
+        <% } else { %>
+          <link rel="apple-touch-icon" sizes="180x180" href="<%= url_for(theme.favicon.apple.url) %>">
         <% } %>
+      <% } %>
     <% } %>
     <!-- title -->
     <title><%= page_title() %></title>
