Configurable logo grayout effect

--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -7,6 +7,6 @@ $page-width = 0rem + (hexo-config("page_width") || 39)
 // Logo
 $logo-width = 0px + (hexo-config("logo.width") || 0)
 $logo-height = 0px + (hexo-config("logo.height") || 0)
-$logo-grayout = hexo-config("logo-grayout")
+$logo-grayout = hexo-config("logo.grayout") || false
 // Colors
 $colors = hexo-config("colorscheme") || "dark"
