--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -71,7 +71,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-PKMLYZ9MYX');
+        gtag('config', '<%= theme.google_analytics.id %>');
     </script>
 <% } %>
 <!-- Baidu Analytics -->
