--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -74,6 +74,16 @@
         gtag('config', '<%= theme.google_analytics.id %>');
     </script>
 <% } %>
+<!-- Microsoft clarity -->
+<% if (theme.microsoft_clarity.enabled && theme.microsoft_clarity.id){ %>
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, 'clarity', 'script', '<%= theme.microsoft_clarity.id %>');
+</script>
+<% } %>
 <!-- Baidu Analytics -->
 <% if (theme.baidu_analytics.enabled && theme.baidu_analytics.id){ %>
   <script type="text/javascript">
