Allow syntax highlighting style background to flow through, rather than be overrided by theme-defined background.

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -153,7 +153,7 @@ code
   margin: 1rem 0
   padding: 10px 15px
   border-radius: 4px
-  background: $color-background-code
+  // background: $color-background-code
   font-family: $font-family-mono
   // color: $color-accent-3
   -webkit-border-radius: 4px
