--- a/source/css/_colors/dark.styl
+++ b/source/css/_colors/dark.styl
@@ -2,8 +2,8 @@ $color-background = #1d1f21
 $color-footer-mobile-1 = lighten($color-background, 2%)
 $color-footer-mobile-2 = lighten($color-background, 10%)
 $color-background-code = lighten($color-background, 2%)
-$color-border = #666
-$color-meta = #666
+$color-border = #908d8d
+$color-meta = #908d8d
 $color-meta-code = #666
 $color-link = rgba(212, 128, 170, 1)
 $color-text = #c9cacc
