loads rtl css only when specified in the configuration

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -52,7 +52,7 @@
     <!-- styles -->
     <%- css('css/style') %>
     <!-- persian styles -->
-    <% if (theme.direction) { %>
+    <% if (theme.direction && theme.direction === 'rtl') { %>
       <%- css('css/rtl') %>
     <% } %>
     <!-- rss -->
