--- a/source/css/_colors/dark.styl
+++ b/source/css/_colors/dark.styl
@@ -4,7 +4,7 @@ $color-footer-mobile-2 = lighten($color-background, 10%)
 $color-background-code = lighten($color-background, 2%)
 $color-border = #908d8d
 $color-meta = #908d8d
-$color-meta-code = #666
+$color-meta-code = #908d8d
 $color-link = rgba(212, 128, 170, 1)
 $color-text = #c9cacc
 $color-accent-3 = #cccccc
