optimised css loads

--- a/layout/_partial/styles.ejs
+++ b/layout/_partial/styles.ejs
@@ -1,3 +1,6 @@
 <!-- styles -->
-<%- css('lib/font-awesome/css/all.min.css') %>
-<%- css('lib/justified-gallery/css/justifiedGallery.min.css') %>
+<link rel="preload" href="/lib/justified-gallery/css/justifiedGallery.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="/lib/font-awesome/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="/lib/justified-gallery/css/justifiedGallery.min.css"></noscript>
+<noscript><link rel="stylesheet" href="/lib/font-awesome/css/all.min.css"></noscript>
+
