fix: Lists do not contain only <li> elements and script supporting elements (<script> and <template>)

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -8,7 +8,7 @@
       <% change = year !== itemYear %>
       <% year = change ? itemYear : year %>
       <% if (change) { %>
-        <h2><%= year %></h2>
+        <li aria-label="year"><h2><%= year %></h2></li>
       <% } %>
       <li class="post-item">
         <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
