fixed accessibility issues

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -18,7 +18,7 @@
   <div id="nav">
     <ul>
       <li class="icon">
-        <a href="#" aria-label="menu"><i class="fas fa-bars fa-2x"></i></a>
+        <a href="#" aria-label="<%- __('icons.menu') %>"><i class="fas fa-bars fa-2x"></i></a>
       </li>
       <% for (var i in theme.nav) { %> 
         <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li>
