--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -8,7 +8,7 @@
       <% change = year !== itemYear %>
       <% year = change ? itemYear : year %>
       <% if (change) { %>
-        <li aria-label="year" class="post-year"><h2><%= year %></h2></li>
+        <li class="post-year"><h2><%= year %></h2></li>
       <% } %>
       <li class="post-item">
         <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
