--- a/layout/_partial/styles.ejs
+++ b/layout/_partial/styles.ejs
@@ -1,9 +1,24 @@
 <!-- styles -->
 <% if (page.photos && page.photos.length) { %>
-  <link rel="preload" href="/lib/justified-gallery/css/justifiedGallery.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="/lib/justified-gallery/css/justifiedGallery.min.css"></noscript>
+<link
+  rel="preload"
+  href="<%- url_for('/lib/justified-gallery/css/justifiedGallery.min.css') %>"
+  as="style"
+  onload="this.onload=null;this.rel='stylesheet'"
+/>
+<noscript
+  ><link
+    rel="stylesheet"
+    href="<%- url_for('/lib/justified-gallery/css/justifiedGallery.min.css')  %>"
+/></noscript>
 <% } %>
 
-<link rel="preload" href="/lib/font-awesome/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="/lib/font-awesome/css/all.min.css"></noscript>
-
+<link
+  rel="preload"
+  href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
+  as="style"
+  onload="this.onload=null;this.rel='stylesheet'"
+/>
+<noscript
+  ><link rel="stylesheet" href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
+/></noscript>
