--- a/layout/_partial/styles.ejs
+++ b/layout/_partial/styles.ejs
@@ -1,24 +1,33 @@
 <!-- styles -->
 <% if (page.photos && page.photos.length) { %>
-<link
-  rel="preload"
-  href="<%- url_for('/lib/justified-gallery/css/justifiedGallery.min.css') %>"
-  as="style"
-  onload="this.onload=null;this.rel='stylesheet'"
-/>
-<noscript
-  ><link
-    rel="stylesheet"
-    href="<%- url_for('/lib/justified-gallery/css/justifiedGallery.min.css')  %>"
-/></noscript>
+  <% if (isCdnEnable('justified_gallery_css')) { %>
+    <%- getCdnLink('justified_gallery_css', {preload: true}) %> 
+  <% } else { %> 
+    <link
+      rel="preload"
+      href="<%- url_for('/lib/justified-gallery/css/justifiedGallery.min.css') %>"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"/>
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="<%- url_for('/lib/justified-gallery/css/justifiedGallery.min.css')  %>"/>
+    </noscript>
+  <% } %> 
 <% } %>
 
-<link
-  rel="preload"
-  href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
-  as="style"
-  onload="this.onload=null;this.rel='stylesheet'"
-/>
-<noscript
-  ><link rel="stylesheet" href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
-/></noscript>
+<% if (isCdnEnable('font_awesome')) { %>
+  <%- getCdnLink('font_awesome', {preload: true}) %>
+<% } else { %> 
+  <link
+    rel="preload"
+    href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
+    as="style"
+    onload="this.onload=null;this.rel='stylesheet'"
+  />
+  <noscript
+    ><link
+      rel="stylesheet"
+      href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
+  /></noscript>
+<% } %>
