--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -62,7 +62,8 @@
     <% if (theme.rss) { %>
       <link rel="alternate" href="<%= url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml" />
     <% } %>
-	<% if (theme.MathJax) %>
+	<!-- mathjax -->
+	<% if (theme.mathjax) {%>
 		<script type="text/x-mathjax-config">
 		  MathJax.Hub.Config({
 			tex2jax: {
