Follow config style of other plugins

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -63,7 +63,7 @@
       <link rel="alternate" href="<%= url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml" />
     <% } %>
 	<!-- mathjax -->
-	<% if (theme.mathjax) {%>
+	<% if (theme.mathjax.enabled) {%>
 		<script type="text/x-mathjax-config">
 		  MathJax.Hub.Config({
 			tex2jax: {
