:lipstick: Updating the <html> border color.

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -14,7 +14,7 @@ html
   margin: 0
   padding: 0
   height: 100%
-  border-top: 2px solid $color-text
+  border-top: 2px solid $color-background
   -webkit-text-size-adjust: 100%
   -ms-text-size-adjust: 100%
 
