--- a/layout/_partial/post/actions_desktop.ejs
+++ b/layout/_partial/post/actions_desktop.ejs
@@ -5,9 +5,9 @@
   <span id="menu">
     <span id="nav">
       <ul>
-        <% for (var i in theme.nav) { %> 
-          <li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li>
-        <% } %>
+        <% for (var i in theme.nav) { %><!--
+       --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
+     --><% } %>
       </ul>
     </span>
     <br/>
