upyun league logo for footer.ejs

--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -43,6 +43,9 @@
     vertical-align: middle
     line-height: 20px
 
+  .image
+    vertical-align: middle
+
 @media (min-width: 39rem)
   #footer
     display: flex
