--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
 <footer id="footer">
-  <div class="footer-left">
+  <img class="footer-left">
     <%= __('footer.copyright') %> &copy;
     <% var endYear = (theme.copyright && theme.copyright.end_year) ? theme.copyright.end_year : new Date().getFullYear() %>
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
@@ -13,7 +13,12 @@
 
     <% } %>
 
-  </div>
+    <% if (theme.upyun_setting.enable){%>
+
+    <div>
+      <%="本网站由 " %> <a  href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"><img src="..\images\upyun.png" width="30" height="11" ></a><%=" 提供 CDN 加速/云存储服务" %>
+    </div>
+    <% } %>
   <div class="footer-right">
     <nav>
       <ul>
