--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -146,3 +146,22 @@
       }());
   </script>
 <% } %>
+<!-- giscus Comments -->
+<% if (page.comments && theme.giscus.enabled && theme.giscus.repo && theme.giscus.repo_id && theme.giscus.category_id){ %>
+  <script src="https://giscus.app/client.js"
+    data-repo="<%= theme.giscus.repo %>"
+    data-repo-id="<%= theme.giscus.repo_id %>"
+    data-category="<%= theme.giscus.category %>"
+    data-category-id="<%= theme.giscus.category_id %>"
+    data-mapping="<%= theme.giscus.mapping %>"
+    data-term="<%= theme.giscus.term %>"
+    data-strict="<%= theme.giscus.strict %>"
+    data-reactions-enabled="<%= theme.giscus.reactions_enabled %>"
+    data-emit-metadata="<%= theme.giscus.emit_metadata %>"
+    data-input-position="<%= theme.giscus.input_position %>"
+    data-theme="<%= theme.giscus.theme %>"
+    data-lang="<%= theme.giscus.lang %>"
+    data-loading="<%= theme.giscus.loading %>"
+    crossorigin="anonymous"
+    async> </script>
+<% } %> 
