Fixed a bug where the bottom image did not show

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -16,7 +16,7 @@
     <% if (theme.upyun_setting.enable){%>
 
     <div>
-      <%="本网站由 " %> <a  href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"><img src="..\images\upyun.png" width="30" height="11" ></a><%=" 提供 CDN 加速/云存储服务" %>
+      <%="本网站由 " %> <a  href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"><img src=".\images\upyun.png" width="30" height="11" ></a><%=" 提供 CDN 加速/云存储服务" %>
     </div>
     <% } %>
   <div class="footer-right">
