fix(google analytics): put the analytics in the <head>
Accroding to the [guide](https://developers.google.com/analytics/devguides/collection/gtagjs?hl=en#install_the_google_tag),
the google analytics code should be put after the `<head>`, the current
code puts this in the `<body>`, which is not correct, so this commits
does two things to fix this:

+ add a new template file called `google_analytics.ejs` to move the
  logic from `scripts.ejs`.
+ add a new line in `head.ejs` to incorporate `google_analytics.ejs`.

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -1,4 +1,5 @@
 <head>
+    <%- partial('./google_analytics.ejs') %>
     <!-- so meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
