Fix firefox underline inconsistent thickness

--- a/source/css/_mixins.styl
+++ b/source/css/_mixins.styl
@@ -9,7 +9,7 @@ hyphens($value)
   -webkit-hyphens: $value
 
 underline($size, $color)
-  background-image: linear-gradient(transparent, transparent $size, $color $size, $color)
+  background-image: linear-gradient(transparent, transparent $size, $color $size, transparent)
   background-position: bottom
   background-size: 100% 6px
   background-repeat: repeat-x
