--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -78,7 +78,7 @@ body
     underline(5px, $color-text)
 
     &:hover
-      background-image: linear-gradient(transparent, transparent 4px, $color-link 4px, $color-link)
+      background-image: linear-gradient(transparent, transparent 4px, $color-link 4px, transparent)
 
   a.icon
     background: none
