Basic support for microformats

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,5 +1,5 @@
-<header id="header">
-  <a href="<%- url_for("/") %>">
+<header id="header" class="h-card">
+  <a class="u-url" href="<%- url_for("/") %>">
   <% if (theme.logo && theme.logo.enabled) { %>
     <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.logo.gravatar) { %>
       <% if (theme.gravatar.email) { %>
@@ -12,7 +12,7 @@
     <% } %>
   <% } %>
     <div id="title">
-      <h1><%= config.title %></h1>
+      <h1 class="p-name"><%= config.title %></h1>
     </div>
   </a>
   <div id="nav">
