--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -9,7 +9,7 @@
       <% var i = 0 %>
       <% for(var link in theme.social_links) { %>
         <% if (link == 'mail') { %>
-          <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>" aria-label="<%- link %>">
+          <a class="icon u-email" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>" aria-label="<%- link %>">
             <i class="fas fa-envelope"></i><!--
       ---></a>
         <% } else if (link == 'rss') { %>
