Add p-note for config.description

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,4 +1,4 @@
-<header id="header" class="h-card">
+<header id="header">
   <a class="u-url" href="<%- url_for("/") %>">
   <% if (theme.logo && theme.logo.enabled) { %>
     <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.logo.gravatar) { %>
