--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,4 +1,4 @@
-<section id="about">
+<section id="about" class="p-note">
   <% if (config.description) { %>
     <%- markdown(config.description) %>
   <% } %>
