--- a/layout/_partial/post/tag.ejs
+++ b/layout/_partial/post/tag.ejs
@@ -1,6 +1,6 @@
 <% if (page.tags && page.tags.length) { %>
     <div class="article-tag">
         <i class="fas fa-tag"></i>
-        <%- list_tags(page.tags, { show_count: false, style: 'list', class: {a: 'p-category' }}) %>
+        <%- list_tags(page.tags, { show_count: false, style: 'link', class: {a: 'p-category' }}) %>
     </div>
 <% } %>
