--- a/layout/_partial/styles.ejs
+++ b/layout/_partial/styles.ejs
@@ -1,4 +1,5 @@
 <!-- styles -->
+<%- css('https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css') %>
 <% if (page.photos && page.photos.length) { %>
   <% if (isCdnEnable('justified_gallery_css')) { %>
     <%- getCdnLink('justified_gallery_css', {preload: true}) %> 
