--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,6 +1,6 @@
 // Fonts
-$font-family-body = "Menlo", "Meslo LG", monospace
-$font-family-mono = "Menlo", "Meslo LG", monospace
+$font-family-body = "Nanum Gothic Coding", "Menlo", "Meslo LG", monospace
+$font-family-mono = "Nanum Gothic Coding", "Menlo", "Meslo LG", monospace
 $font-size = 14px
 $line-height = 1.725
 $page-width = 0rem + (hexo-config("page_width") || 39)
