--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,18 +1,22 @@
 <header id="header">
-  <a href="<%- url_for("/") %>">
+  <a class="u-url u-uid" href="<%- url_for("/") %>">
   <% if (theme.logo && theme.logo.enabled) { %>
     <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.logo.gravatar) { %>
       <% if (theme.gravatar.email) { %>
-        <div id="logo" style="background-image: url(<%- gravatar(theme.gravatar.email) %>);"></div>
+        <img id="logo" alt class="u-logo" 
+          srcset="<%- gravatar(theme.gravatar.email) %>?s=<%= theme.logo.width %>, <%- gravatar(theme.gravatar.email) %>?s=<%= theme.logo.width*1.5 %> 1.5x, <%- gravatar(theme.gravatar.email) %>?s=<%= theme.logo.width*2 %> 2x"
+          src="<%- gravatar(theme.gravatar.email) %>" />
       <% } else { %>
-        <div id="logo" style="background-image: url(https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>);"></div>
+        <img id="logo" alt class="u-logo" 
+          srcset="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=<%= theme.logo.width %>, https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=<%= theme.logo.width*1.5 %> 1.5x, https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=<%= theme.logo.width*2 %> 2x"
+          src="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>" />
       <% } %>
     <% } else { %>
-      <div id="logo" style="background-image: url(<%- url_for(theme.logo.url) %>);"></div>
+      <img id="logo" alt class="u-logo" src="<%- url_for(theme.logo.url) %>" />
     <% } %>
   <% } %>
     <div id="title">
-      <h1><%= config.title %></h1>
+      <h1 class="p-name"><%= config.title %></h1>
     </div>
   </a>
   <div id="nav">
