fix(google analytics): put the analytics in the <head> (#336)
According to the guide (https://developers.google.com/analytics/devguides/collection/gtagjs?hl=en#install_the_google_tag), the google analytics code should be put after the <head>.
---------

Co-authored-by: Pieter Robberechts <Pieter_Robberechts@msn.com>

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -49,6 +49,8 @@
     <% } %>
     <!-- title -->
     <title><%= page_title() %></title>
+    <!-- async scripts -->
+    <%- partial('./google_analytics.ejs') %>
     <!-- styles -->
     <%- css('css/style') %>
     <!-- persian styles -->
