--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -51,6 +51,7 @@
     <title><%= page_title() %></title>
     <!-- async scripts -->
     <%- partial('./google_analytics.ejs') %>
+    <%- partial('./umami_analytics.ejs') %>
     <!-- styles -->
     <%- css('css/style') %>
     <!-- persian styles -->
@@ -76,11 +77,4 @@
 		</script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 	<% } %>
-    <!-- Umami Analytics -->
-    <% if (theme.umami_analytics.enabled && theme.umami_analytics.id && theme.umami_analytics.host && theme.umami_analytics.script_name){ %>
-        <script async defer
-                data-website-id="<%= theme.umami_analytics.id %>"
-                src="<%= theme.umami_analytics.host %>/<%= theme.umami_analytics.script_name %>">
-        </script>
-    <% } %>
 </head>
