Update Font Awesome to v6.4.0

--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -1,31 +1,31 @@
 <!-- jquery -->
-<% if (isCdnEnable('jquery')) {%> 
-  <%- getCdnScript('jquery') %> 
-<% } else { %> 
+<% if (isCdnEnable('jquery')) {%>
+  <%- getCdnScript('jquery') %>
+<% } else { %>
   <%- js('lib/jquery/jquery.min') %>
 <% } %>
 
 <% if (page.photos && page.photos.length) { %>
   <% if (isCdnEnable('justified_gallery_js')) {%>
-    <%- getCdnScript('justified_gallery_js') %> 
-  <% } else { %> 
+    <%- getCdnScript('justified_gallery_js') %>
+  <% } else { %>
     <%- js('lib/justified-gallery/js/jquery.justifiedGallery.min.js') %>
-  <% } %> 
+  <% } %>
 <% } %>
 
 <!-- clipboard -->
 <% if (is_post()){ %>
   <% if (isCdnEnable('clipboard')) { %>
-    <%- getCdnScript('clipboard') %> 
-  <% } else { %> 
+    <%- getCdnScript('clipboard') %>
+  <% } else { %>
     <%- js('lib/clipboard/clipboard.min') %>
   <% } %>
   <script type="text/javascript">
   $(function() {
     // copy-btn HTML
     var btn = "<span class=\"btn-copy tooltipped tooltipped-sw\" aria-label=\"<%= __('tooltip.copy_tip') %>\">";
-    btn += '<i class="far fa-clone"></i>';
-    btn += '</span>'; 
+    btn += '<i class="fa-regular fa-clone"></i>';
+    btn += '</span>';
     // mount it!
     $(".highlight table").before(btn);
     var clip = new ClipboardJS('.btn-copy', {
