--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -3,11 +3,11 @@
   <% if (theme.logo && theme.logo.enabled) { %>
     <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.logo.gravatar) { %>
       <% if (theme.gravatar.email) { %>
-        <img id="logo" alt class="u-logo" 
+        <img id="logo" alt class="u-logo"
           srcset="<%- gravatar(theme.gravatar.email) %>?s=<%= theme.logo.width %>, <%- gravatar(theme.gravatar.email) %>?s=<%= theme.logo.width*1.5 %> 1.5x, <%- gravatar(theme.gravatar.email) %>?s=<%= theme.logo.width*2 %> 2x"
           src="<%- gravatar(theme.gravatar.email) %>" />
       <% } else { %>
-        <img id="logo" alt class="u-logo" 
+        <img id="logo" alt class="u-logo"
           srcset="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=<%= theme.logo.width %>, https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=<%= theme.logo.width*1.5 %> 1.5x, https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>?s=<%= theme.logo.width*2 %> 2x"
           src="https://www.gravatar.com/avatar/<%= theme.gravatar.hash %>" />
       <% } %>
@@ -22,7 +22,7 @@
   <div id="nav">
     <ul>
       <li class="icon">
-        <a href="#" aria-label="<%- __('icons.menu') %>"><i class="fas fa-bars fa-2x"></i></a>
+        <a href="#" aria-label="<%- __('icons.menu') %>"><i class="fa-solid fa-bars fa-2x"></i></a>
       </li>
       <% for (var i in theme.nav) { %><!--
      --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
