--- a/layout/_partial/post/tag.ejs
+++ b/layout/_partial/post/tag.ejs
@@ -1,6 +1,6 @@
 <% if (page.tags && page.tags.length) { %>
     <div class="article-tag">
-        <i class="fas fa-tag"></i>
+        <i class="fa-solid fa-tag"></i>
         <%- list_tags(page.tags, { show_count: false, style: 'link', class: {a: 'p-category' }}) %>
     </div>
 <% } %>
