Support Web-App manifests

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -12,6 +12,12 @@
         google_plus:    theme.open_graph.google_plus,
     }) %>
     <%- meta(page) %>
+
+    <% if (theme.manifest) { %>
+      <% if (theme.manifest.url) { %>
+        <link rel="manifest" href="<%= url_for(theme.manifest.url) %>">
+      <% } %>
+    <% } %>
     <% if (theme.favicon) { %>
       <% if (theme.favicon.desktop) { %>
         <% if (theme.gravatar && (theme.gravatar.email || theme.gravatar.hash) && theme.favicon.desktop.gravatar) { %>
