add waline comment system support.

--- a/layout/_partial/comments.ejs
+++ b/layout/_partial/comments.ejs
@@ -12,3 +12,8 @@
         </div>
     </div>
 <% } %>
+<% if(page.comments && theme.waline && theme.waline.enabled){ %>
+    <div class="blog-post-comments">
+        <div id="waline_thread"></div>
+    </div>
+<% } %>
