--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -129,7 +129,7 @@
 
           script.src = 'https://utteranc.es/client.js';
           script.setAttribute('repo', utterances_repo);
-          script.setAttribute('issue-term', 'pathname');
+          script.setAttribute('issue-term', utterances_issue_term);
           script.setAttribute('label', utterances_label);
           script.setAttribute('theme', utterances_theme);
           script.setAttribute('crossorigin', 'anonymous');
