fix: remove unexpected spaces in nav (#388)
Co-Authored-By: 风记星辰 <90146186+thyuu@users.noreply.github.com>

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -44,6 +44,7 @@
       padding: 0
       list-style-type: none
       line-height: 15px
+      display: inline-table
 
       a
         margin-right: 15px
@@ -86,6 +87,8 @@ if $logo-grayout
 
   #header #nav
     ul
+      display: inline-table
+
       a:hover
         background: none
 
