--- a/source/css/rtl.styl
+++ b/source/css/rtl.styl
@@ -30,6 +30,9 @@
   direction: rtl
 
   #nav
+    ul
+      display: inline-table
+      
     li
       margin-right: 0px !important // @stylint ignore
       padding-left: 15px
@@ -87,6 +90,8 @@
 
       #nav
         ul
+          display: inline-table
+
           li
             left: 1rem
             right: auto
